@@ -1,8 +1,12 @@
-Stacks 2.0
+Stacks 2.0 Beta 9 - Mar 06, 2018
 --------------------------------
     Feature: Cleaned up tags/snps/alleles/matches files. We removed the batch ID from ustacks and cstacks 
              output, and the deprecated log likelihood fields from ustacks and cstacks. We also removed 
              the chromosome/bp/strand fields as they are no longer used in these files.
+    Feature: Renamed gstacks output files that represent the new components of the catalog:
+               gstacks.fa.gz => catalog.fa.gz; gstacks.vcf.gz => catalog.calls
+    Feature: Removed read length restrictions from ustacks/cstacks/sstacks core, reads/loci can vary in
+             length throughout the pipeline.
     Bugfix: Updated to HTSLib 1.7; changed to a custom build system that will work with the Stacks build
             system.
     Bugfix: Made gapped alignments mandatory in ustacks, cstacks, and sstacks. Added check for frameshift 
